--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,29 @@
 {
+    "name": "StopRussianWar",
+    "short_name": "RSA",
+    "theme_color": "#f7f2ee",
+    "background_color": "#f7f2ee",
+    "display": "standalone",
+    "orientation": "portrait",
+    "scope": "/",
+    "start_url": "/index.html",
     "icons": [
-        {
-            "src": "/img/maskable_icon_x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
-        }
-    ]
+    {
+      "src": "/img//maskable_icon_x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/img/maskable_icon_x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/img//maskable_icon_x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+
+    }
+  
+  ]
 }
