--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,24 @@
     "display": "standalone",
     "orientation": "portrait",
     "scope": "/",
-    "start_url": "index.html"
+    "start_url": "index.html",
+    "icons": [
+    {
+      "src": "img//maskable_icon_x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "img/maskable_icon_x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "img//maskable_icon_x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+
+    }
+  
+  ]
 }
