--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "display": "standalone",
     "orientation": "portrait",
     "scope": "/",
-    "start_url": "index.html",
+    "start_url": "/srasite/index.html",
     "icons": [
     {
       "src": "img//maskable_icon_x48.png",
