--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     {
       "src": "img/maskable_icon_x72.png",
       "sizes": "72x72",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "img//maskable_icon_x512.png",
