--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,14 @@
     {
       "src": "img//maskable_icon_x48.png",
       "sizes": "48x48",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "img/maskable_icon_x72.png",
       "sizes": "72x72",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "img//maskable_icon_x512.png",
